# context-builder

./: .gitignore  README.md  context_files.txt  pyproject.toml
context_builder/: __init__.py  cli.py  config.py  core.py
